# wasm_parser

./: Cargo.toml  README.md  Trunk.toml  index.html  styles-fee77a7688f3fa56.css  tailwind-56e2d1da33c6d96a.css  tailwind.config.js  wasm_parser-41ecda6a10e6f561.js  wasm_parser-41ecda6a10e6f561_bg.wasm  wasm_parser-8b16ea655dd558d6.js  wasm_parser-8b16ea655dd558d6_bg.wasm  wasm_parser-ea92cb237453f85c_bg.wasm
.github/workflows/: deploy.yaml
public/: tailwind.css
src/: main.rs
src/pages/: home.rs
