[package]
name = "wasm_parser"
version = "0.1.0"
edition = "2021"
authors = ["smir-ant"]

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }  # для создания реактивных компонентов в Rust. "csr" включает поддержку рендеринга на стороне клиента, а "nightly" активирует функции, доступные только в ночных сборках Rust.
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }  # предоставляет дополнительные инструменты и утилиты для работы с метаданными и мета-тегами
leptos_router = { version = "0.6", features = ["csr", "nightly"] }  # предоставляет маршрутизацию для SPA (одностраничных приложений)
web-sys = "0.3.69"  # web-sys предоставляет доступ к браузерным API через WebAssembly, что позволяет взаимодействовать с DOM и другими веб-функциями.
reqwasm = "0.5.0"  # для выполнения HTTP-запросов в WebAssembly с использованием асинхронных функций.
# почему не reqwest например? ring является библиотекой, которая зависит от компиляции C-кода, а это не поддерживается для WebAssembly
scraper = "0.19.0"  # для парсинга HTML документов и извлечения данных из них
# wasm-bindgen = "0.2.92"  # не использовал |для взаимодействия между WebAssembly и JavaScript, позволяя вызывать JavaScript из Rust и наоборот
wasm-bindgen-futures = "0.4.42"  # предоставляет инструменты для работы с асинхронным кодом в WebAssembly, интегрируя Future с wasm-bindgen
rand = "0.8.5"  # исключительно для случайного выбора классов картинкам

[profile.release]  # Этот раздел содержит настройки для сборки вашего проекта в режиме release.
opt-level = 'z'  # сargo будет стараться минимизировать размер бинарного файла.
lto = true  # включает оптимизацию всего программного обеспечения (Link Time Optimization, LTO)
codegen-units = 1  # вы говорите компилятору обрабатывать всю вашу программу как одну единицу кодогенерации. Это может привести к более эффективной оптимизации кода, потому что компилятор видит всю программу целиком, но это также может замедлить процесс компиляции, потому что он не может использовать параллелизм для ускорения | компромисс между скоростью компиляции и эффективностью оптимизации.
panic = "abort"  # что делать при панике. abort означает, что процесс должен немедленно завершиться
